# esp32-rtsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
example/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
example/audios/: mp32pcm.py
example/images/: convert.py  frames.h
example/linux/: CMakeLists.txt  build.sh  client.c  server.c
example/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_wifi.c  rtsp_test.cpp  wave.c
example/pusher/: partitions.csv  sdkconfig.defaults
example/pusher/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_wifi.c  mic._c
example/simple/: CMakeLists.txt
example/simple/main/: CMakeLists.txt  app_main.c
example/simple/media/: .gitignore  create_media.sh
example/simple/media/audio/: mp32pcm.py  wave.c
example/simple/media/video/: frames.h  generate.py
src/: g711.c  g711.h  media.h  media_g711a.c  media_g711a.cpp  media_g711a.h  media_l16.c  media_l16.cpp  media_l16.h  media_mjpeg.c  media_mjpeg.cpp  media_mjpeg.h  media_stream.c  media_stream.h  platglue.h  port-esp32.c  port-esp32.h  port-posix.c  port-posix.h  rtcp-app.c  rtcp-bye.c  rtcp-header.h  rtcp-internal.h  rtcp-rr.c  rtcp-sdec.c  rtcp-sr.c  rtcp.c  rtp-demuxer.c  rtp-header.h  rtp-member-list.c  rtp-member-list.h  rtp-member.c  rtp-member.h  rtp-pack.c  rtp-param.h  rtp-payload.h  rtp-profile.h  rtp-ssrc.c  rtp-time.c  rtp-util.h  (+12 more)
