idf_component_register(SRC_DIRS "." "../media/audio/" 
                     INCLUDE_DIRS "." "../media/video/" 
                     EMBED_TXTFILES 
"../media/video/frames/hd_001.jpg"
"../media/video/frames/hd_002.jpg"
"../media/video/frames/hd_003.jpg"
"../media/video/frames/hd_004.jpg"
"../media/video/frames/hd_005.jpg"
"../media/video/frames/hd_006.jpg"
"../media/video/frames/hd_007.jpg"
"../media/video/frames/hd_008.jpg"
"../media/video/frames/hd_009.jpg"
"../media/video/frames/hd_010.jpg"
"../media/video/frames/hd_011.jpg"
"../media/video/frames/hd_012.jpg"
"../media/video/frames/hd_013.jpg"
"../media/video/frames/hd_014.jpg"
"../media/video/frames/hd_015.jpg"
"../media/video/frames/hd_016.jpg"
"../media/video/frames/hd_017.jpg"
"../media/video/frames/hd_018.jpg"
"../media/video/frames/hd_019.jpg"
"../media/video/frames/hd_020.jpg"
"../media/video/frames/hd_021.jpg"
"../media/video/frames/hd_022.jpg"
"../media/video/frames/hd_023.jpg"
"../media/video/frames/hd_024.jpg"
"../media/video/frames/hd_025.jpg"
"../media/video/frames/hd_026.jpg"
"../media/video/frames/hd_027.jpg"
"../media/video/frames/hd_028.jpg"
"../media/video/frames/hd_029.jpg"
"../media/video/frames/hd_030.jpg"
"../media/video/frames/hd_031.jpg"
"../media/video/frames/hd_032.jpg"
"../media/video/frames/hd_033.jpg"
"../media/video/frames/hd_034.jpg"
"../media/video/frames/hd_035.jpg"
"../media/video/frames/hd_036.jpg"
"../media/video/frames/hd_037.jpg"
"../media/video/frames/hd_038.jpg"
"../media/video/frames/hd_039.jpg"
"../media/video/frames/hd_040.jpg"
"../media/video/frames/hd_041.jpg"
"../media/video/frames/hd_042.jpg"
"../media/video/frames/hd_043.jpg"
"../media/video/frames/hd_044.jpg"
"../media/video/frames/hd_045.jpg"
"../media/video/frames/hd_046.jpg"
"../media/video/frames/hd_047.jpg"
"../media/video/frames/hd_048.jpg"
"../media/video/frames/hd_049.jpg"
"../media/video/frames/hd_050.jpg"
"../media/video/frames/hd_051.jpg"
"../media/video/frames/hd_052.jpg"
"../media/video/frames/hd_053.jpg"
"../media/video/frames/hd_054.jpg"
"../media/video/frames/hd_055.jpg"
"../media/video/frames/hd_056.jpg"
"../media/video/frames/hd_057.jpg"
"../media/video/frames/hd_058.jpg"
"../media/video/frames/hd_059.jpg"
"../media/video/frames/hd_060.jpg"
"../media/video/frames/hd_061.jpg"
"../media/video/frames/hd_062.jpg"
"../media/video/frames/hd_063.jpg"
"../media/video/frames/hd_064.jpg"
"../media/video/frames/hd_065.jpg"
"../media/video/frames/hd_066.jpg"
"../media/video/frames/hd_067.jpg"
"../media/video/frames/hd_068.jpg"
"../media/video/frames/hd_069.jpg"
"../media/video/frames/hd_070.jpg"
"../media/video/frames/hd_071.jpg"
"../media/video/frames/hd_072.jpg"
"../media/video/frames/hd_073.jpg"
"../media/video/frames/hd_074.jpg"
"../media/video/frames/hd_075.jpg"
"../media/video/frames/hd_076.jpg"
"../media/video/frames/hd_077.jpg"
"../media/video/frames/hd_078.jpg"
"../media/video/frames/hd_079.jpg"
"../media/video/frames/hd_080.jpg"
"../media/video/frames/hd_081.jpg"
"../media/video/frames/hd_082.jpg"
"../media/video/frames/hd_083.jpg"
"../media/video/frames/hd_084.jpg"
"../media/video/frames/hd_085.jpg"
"../media/video/frames/hd_086.jpg"
"../media/video/frames/hd_087.jpg"
"../media/video/frames/hd_088.jpg"
"../media/video/frames/hd_089.jpg"
"../media/video/frames/hd_090.jpg"
"../media/video/frames/hd_091.jpg"
"../media/video/frames/hd_092.jpg"
"../media/video/frames/hd_093.jpg"
"../media/video/frames/hd_094.jpg"
"../media/video/frames/hd_095.jpg"
"../media/video/frames/hd_096.jpg"
"../media/video/frames/hd_097.jpg"
"../media/video/frames/hd_098.jpg"
"../media/video/frames/hd_099.jpg"
"../media/video/frames/hd_100.jpg"
"../media/video/frames/hd_101.jpg"
"../media/video/frames/hd_102.jpg"
"../media/video/frames/hd_103.jpg"
"../media/video/frames/hd_104.jpg"
"../media/video/frames/hd_105.jpg"
"../media/video/frames/hd_106.jpg"
"../media/video/frames/hd_107.jpg"
"../media/video/frames/hd_108.jpg"
"../media/video/frames/hd_109.jpg"
"../media/video/frames/hd_110.jpg"
"../media/video/frames/hd_111.jpg"
"../media/video/frames/hd_112.jpg"
"../media/video/frames/hd_113.jpg"
"../media/video/frames/hd_114.jpg"
"../media/video/frames/hd_115.jpg"
"../media/video/frames/hd_116.jpg"
"../media/video/frames/hd_117.jpg"
"../media/video/frames/hd_118.jpg"
"../media/video/frames/hd_119.jpg"
"../media/video/frames/hd_120.jpg"
"../media/video/frames/hd_121.jpg"
"../media/video/frames/hd_122.jpg"
"../media/video/frames/hd_123.jpg"
"../media/video/frames/hd_124.jpg"
"../media/video/frames/hd_125.jpg"
"../media/video/frames/hd_126.jpg"
"../media/video/frames/hd_127.jpg"
"../media/video/frames/hd_128.jpg"
"../media/video/frames/hd_129.jpg"
"../media/video/frames/hd_130.jpg"
"../media/video/frames/hd_131.jpg"
"../media/video/frames/hd_132.jpg"
"../media/video/frames/hd_133.jpg"
"../media/video/frames/hd_134.jpg"
"../media/video/frames/hd_135.jpg"
"../media/video/frames/hd_136.jpg"
"../media/video/frames/hd_137.jpg"
"../media/video/frames/hd_138.jpg"
"../media/video/frames/hd_139.jpg"
"../media/video/frames/hd_140.jpg"
"../media/video/frames/hd_141.jpg"
"../media/video/frames/hd_142.jpg"
"../media/video/frames/hd_143.jpg"
"../media/video/frames/hd_144.jpg"
"../media/video/frames/hd_145.jpg"
"../media/video/frames/hd_146.jpg"
"../media/video/frames/hd_147.jpg"
"../media/video/frames/hd_148.jpg"
"../media/video/frames/hd_149.jpg"
"../media/video/frames/hd_150.jpg"
"../media/video/frames/hd_151.jpg"
"../media/video/frames/hd_152.jpg"
"../media/video/frames/hd_153.jpg"
"../media/video/frames/hd_154.jpg"
"../media/video/frames/hd_155.jpg"
"../media/video/frames/hd_156.jpg"
"../media/video/frames/hd_157.jpg"
"../media/video/frames/hd_158.jpg"
"../media/video/frames/hd_159.jpg"
"../media/video/frames/hd_160.jpg"
"../media/video/frames/hd_161.jpg"
"../media/video/frames/hd_162.jpg"
"../media/video/frames/hd_163.jpg"
"../media/video/frames/hd_164.jpg"
"../media/video/frames/hd_165.jpg"
"../media/video/frames/hd_166.jpg"
"../media/video/frames/hd_167.jpg"
"../media/video/frames/hd_168.jpg"
"../media/video/frames/hd_169.jpg"
"../media/video/frames/hd_170.jpg"
"../media/video/frames/hd_171.jpg"
"../media/video/frames/hd_172.jpg"
"../media/video/frames/hd_173.jpg"
"../media/video/frames/hd_174.jpg"
"../media/video/frames/hd_175.jpg"
"../media/video/frames/hd_176.jpg"
"../media/video/frames/hd_177.jpg"
"../media/video/frames/hd_178.jpg"
"../media/video/frames/hd_179.jpg"
"../media/video/frames/hd_180.jpg"
"../media/video/frames/hd_181.jpg"
"../media/video/frames/hd_182.jpg"
"../media/video/frames/hd_183.jpg"
"../media/video/frames/hd_184.jpg"
"../media/video/frames/hd_185.jpg"
"../media/video/frames/hd_186.jpg"
"../media/video/frames/hd_187.jpg"
"../media/video/frames/hd_188.jpg"
"../media/video/frames/hd_189.jpg"
"../media/video/frames/hd_190.jpg"
"../media/video/frames/hd_191.jpg"
"../media/video/frames/hd_192.jpg"
"../media/video/frames/hd_193.jpg"
"../media/video/frames/hd_194.jpg"
"../media/video/frames/hd_195.jpg"
"../media/video/frames/hd_196.jpg"
"../media/video/frames/hd_197.jpg"
"../media/video/frames/hd_198.jpg"
"../media/video/frames/hd_199.jpg"
"../media/video/frames/hd_200.jpg"
"../media/video/frames/hd_201.jpg"
"../media/video/frames/hd_202.jpg"
"../media/video/frames/hd_203.jpg"
"../media/video/frames/hd_204.jpg"
"../media/video/frames/hd_205.jpg"
"../media/video/frames/hd_206.jpg"
"../media/video/frames/hd_207.jpg"
"../media/video/frames/hd_208.jpg"
"../media/video/frames/hd_209.jpg"
"../media/video/frames/hd_210.jpg"
"../media/video/frames/hd_211.jpg"
"../media/video/frames/hd_212.jpg"
"../media/video/frames/hd_213.jpg"
"../media/video/frames/hd_214.jpg"
"../media/video/frames/hd_215.jpg"
"../media/video/frames/hd_216.jpg"
"../media/video/frames/hd_217.jpg"
"../media/video/frames/hd_218.jpg"
"../media/video/frames/hd_219.jpg"
"../media/video/frames/hd_220.jpg"
"../media/video/frames/hd_221.jpg"
"../media/video/frames/hd_222.jpg"
"../media/video/frames/hd_223.jpg"
"../media/video/frames/hd_224.jpg"
"../media/video/frames/hd_225.jpg"
"../media/video/frames/hd_226.jpg"
"../media/video/frames/hd_227.jpg"
"../media/video/frames/hd_228.jpg"
"../media/video/frames/hd_229.jpg"
"../media/video/frames/hd_230.jpg"
"../media/video/frames/hd_231.jpg"
"../media/video/frames/hd_232.jpg"
"../media/video/frames/hd_233.jpg"
"../media/video/frames/hd_234.jpg"
"../media/video/frames/hd_235.jpg"
"../media/video/frames/hd_236.jpg"
"../media/video/frames/hd_237.jpg"
"../media/video/frames/hd_238.jpg"
"../media/video/frames/hd_239.jpg"
"../media/video/frames/hd_240.jpg"
"../media/video/frames/hd_241.jpg"
"../media/video/frames/hd_242.jpg"
"../media/video/frames/hd_243.jpg"
"../media/video/frames/hd_244.jpg"
"../media/video/frames/hd_245.jpg"
"../media/video/frames/hd_246.jpg"
"../media/video/frames/hd_247.jpg"
"../media/video/frames/hd_248.jpg"
"../media/video/frames/hd_249.jpg"
"../media/video/frames/hd_250.jpg"
"../media/video/frames/hd_251.jpg"
"../media/video/frames/hd_252.jpg"
"../media/video/frames/hd_253.jpg"
"../media/video/frames/hd_254.jpg"
"../media/video/frames/hd_255.jpg"
"../media/video/frames/hd_256.jpg"
"../media/video/frames/hd_257.jpg"
"../media/video/frames/hd_258.jpg"
"../media/video/frames/hd_259.jpg"
"../media/video/frames/hd_260.jpg"
"../media/video/frames/hd_261.jpg"
"../media/video/frames/hd_262.jpg"
"../media/video/frames/hd_263.jpg"
"../media/video/frames/hd_264.jpg"
"../media/video/frames/hd_265.jpg"
"../media/video/frames/hd_266.jpg"
"../media/video/frames/hd_267.jpg"
"../media/video/frames/hd_268.jpg"
"../media/video/frames/hd_269.jpg"
"../media/video/frames/hd_270.jpg"
"../media/video/frames/hd_271.jpg"
"../media/video/frames/hd_272.jpg"
"../media/video/frames/hd_273.jpg"
"../media/video/frames/hd_274.jpg"
"../media/video/frames/hd_275.jpg"
"../media/video/frames/hd_276.jpg"
"../media/video/frames/hd_277.jpg"
"../media/video/frames/hd_278.jpg"
"../media/video/frames/hd_279.jpg"
"../media/video/frames/hd_280.jpg"
"../media/video/frames/hd_281.jpg"
"../media/video/frames/hd_282.jpg"
"../media/video/frames/hd_283.jpg"
"../media/video/frames/hd_284.jpg"
"../media/video/frames/hd_285.jpg"
"../media/video/frames/hd_286.jpg"
"../media/video/frames/hd_287.jpg"
"../media/video/frames/hd_288.jpg"
"../media/video/frames/hd_289.jpg"
"../media/video/frames/hd_290.jpg"
"../media/video/frames/hd_291.jpg"
"../media/video/frames/hd_292.jpg"
"../media/video/frames/hd_293.jpg"
"../media/video/frames/hd_294.jpg"
"../media/video/frames/hd_295.jpg"
"../media/video/frames/hd_296.jpg"
"../media/video/frames/hd_297.jpg"
"../media/video/frames/hd_298.jpg"
"../media/video/frames/hd_299.jpg"
"../media/video/frames/hd_300.jpg"
"../media/video/frames/hd_301.jpg"
"../media/video/frames/hd_302.jpg"
"../media/video/frames/hd_303.jpg"
"../media/video/frames/hd_304.jpg"
"../media/video/frames/hd_305.jpg"
"../media/video/frames/hd_306.jpg"
"../media/video/frames/hd_307.jpg"
"../media/video/frames/hd_308.jpg"
"../media/video/frames/hd_309.jpg"
"../media/video/frames/hd_310.jpg"
"../media/video/frames/hd_311.jpg"
"../media/video/frames/hd_312.jpg"
"../media/video/frames/hd_313.jpg"
"../media/video/frames/hd_314.jpg"
"../media/video/frames/hd_315.jpg"
"../media/video/frames/hd_316.jpg"
"../media/video/frames/hd_317.jpg"
"../media/video/frames/hd_318.jpg"
"../media/video/frames/hd_319.jpg"
"../media/video/frames/hd_320.jpg"
"../media/video/frames/hd_321.jpg"
"../media/video/frames/hd_322.jpg"
"../media/video/frames/hd_323.jpg"
"../media/video/frames/hd_324.jpg"
"../media/video/frames/hd_325.jpg"
"../media/video/frames/hd_326.jpg"
"../media/video/frames/hd_327.jpg"
"../media/video/frames/hd_328.jpg"
"../media/video/frames/hd_329.jpg"
"../media/video/frames/hd_330.jpg"
"../media/video/frames/hd_331.jpg"
"../media/video/frames/hd_332.jpg"
"../media/video/frames/hd_333.jpg"
"../media/video/frames/hd_334.jpg"
"../media/video/frames/hd_335.jpg"
"../media/video/frames/hd_336.jpg"
"../media/video/frames/hd_337.jpg"
"../media/video/frames/hd_338.jpg"
"../media/video/frames/hd_339.jpg"
"../media/video/frames/hd_340.jpg"
"../media/video/frames/hd_341.jpg"
"../media/video/frames/hd_342.jpg"
"../media/video/frames/hd_343.jpg"
"../media/video/frames/hd_344.jpg"
"../media/video/frames/hd_345.jpg"
"../media/video/frames/hd_346.jpg"
"../media/video/frames/hd_347.jpg"
"../media/video/frames/hd_348.jpg"
"../media/video/frames/hd_349.jpg"
"../media/video/frames/hd_350.jpg"
"../media/video/frames/hd_351.jpg"
"../media/video/frames/hd_352.jpg"
"../media/video/frames/hd_353.jpg"
"../media/video/frames/hd_354.jpg"
"../media/video/frames/hd_355.jpg"
"../media/video/frames/hd_356.jpg"
"../media/video/frames/hd_357.jpg"
"../media/video/frames/hd_358.jpg"
"../media/video/frames/hd_359.jpg"
"../media/video/frames/hd_360.jpg"
"../media/video/frames/hd_361.jpg"
"../media/video/frames/hd_362.jpg"
"../media/video/frames/hd_363.jpg"
"../media/video/frames/hd_364.jpg"
"../media/video/frames/hd_365.jpg"
"../media/video/frames/hd_366.jpg"
"../media/video/frames/hd_367.jpg"
"../media/video/frames/hd_368.jpg"
"../media/video/frames/hd_369.jpg"
"../media/video/frames/hd_370.jpg"
"../media/video/frames/hd_371.jpg"
"../media/video/frames/hd_372.jpg"
"../media/video/frames/hd_373.jpg"
"../media/video/frames/hd_374.jpg"
"../media/video/frames/hd_375.jpg"
"../media/video/frames/hd_376.jpg"
"../media/video/frames/hd_377.jpg"
"../media/video/frames/hd_378.jpg"
"../media/video/frames/hd_379.jpg"
"../media/video/frames/hd_380.jpg"
"../media/video/frames/hd_381.jpg"
"../media/video/frames/hd_382.jpg"
"../media/video/frames/hd_383.jpg"
"../media/video/frames/hd_384.jpg"
"../media/video/frames/hd_385.jpg"
"../media/video/frames/hd_386.jpg"
"../media/video/frames/hd_387.jpg"
"../media/video/frames/hd_388.jpg"
"../media/video/frames/hd_389.jpg"
"../media/video/frames/hd_390.jpg"
"../media/video/frames/hd_391.jpg"
"../media/video/frames/hd_392.jpg"
"../media/video/frames/hd_393.jpg"
"../media/video/frames/hd_394.jpg"
"../media/video/frames/hd_395.jpg"
"../media/video/frames/hd_396.jpg"
"../media/video/frames/hd_397.jpg"
"../media/video/frames/hd_398.jpg"
"../media/video/frames/hd_399.jpg"
"../media/video/frames/hd_400.jpg"
"../media/video/frames/hd_401.jpg"
"../media/video/frames/hd_402.jpg"
"../media/video/frames/hd_403.jpg"
"../media/video/frames/hd_404.jpg"
"../media/video/frames/hd_405.jpg"
"../media/video/frames/hd_406.jpg"
"../media/video/frames/hd_407.jpg"
"../media/video/frames/hd_408.jpg"
"../media/video/frames/hd_409.jpg"
"../media/video/frames/hd_410.jpg"
"../media/video/frames/hd_411.jpg"
"../media/video/frames/hd_412.jpg"
"../media/video/frames/hd_413.jpg"
"../media/video/frames/hd_414.jpg"
"../media/video/frames/hd_415.jpg"
"../media/video/frames/hd_416.jpg"
"../media/video/frames/hd_417.jpg"
"../media/video/frames/hd_418.jpg"
"../media/video/frames/hd_419.jpg"
"../media/video/frames/hd_420.jpg"
"../media/video/frames/hd_421.jpg"
"../media/video/frames/hd_422.jpg"
"../media/video/frames/hd_423.jpg"
"../media/video/frames/hd_424.jpg"
"../media/video/frames/hd_425.jpg"
"../media/video/frames/hd_426.jpg"
"../media/video/frames/hd_427.jpg"
"../media/video/frames/hd_428.jpg"
"../media/video/frames/hd_429.jpg"
"../media/video/frames/hd_430.jpg"
"../media/video/frames/hd_431.jpg"
"../media/video/frames/hd_432.jpg"
"../media/video/frames/hd_433.jpg"
"../media/video/frames/hd_434.jpg"
"../media/video/frames/hd_435.jpg"
"../media/video/frames/hd_436.jpg"
"../media/video/frames/hd_437.jpg"
"../media/video/frames/hd_438.jpg"
"../media/video/frames/hd_439.jpg"
"../media/video/frames/hd_440.jpg"
"../media/video/frames/hd_441.jpg"
"../media/video/frames/hd_442.jpg"
"../media/video/frames/hd_443.jpg"
"../media/video/frames/hd_444.jpg"
"../media/video/frames/hd_445.jpg"
"../media/video/frames/hd_446.jpg"
"../media/video/frames/hd_447.jpg"
"../media/video/frames/hd_448.jpg"
"../media/video/frames/hd_449.jpg"
"../media/video/frames/hd_450.jpg"
"../media/video/frames/hd_451.jpg"
"../media/video/frames/hd_452.jpg"
"../media/video/frames/hd_453.jpg"
"../media/video/frames/hd_454.jpg"
"../media/video/frames/hd_455.jpg"
"../media/video/frames/hd_456.jpg"
"../media/video/frames/hd_457.jpg"
"../media/video/frames/hd_458.jpg"
"../media/video/frames/hd_459.jpg"
"../media/video/frames/hd_460.jpg"
"../media/video/frames/hd_461.jpg"
"../media/video/frames/hd_462.jpg"
"../media/video/frames/hd_463.jpg"
"../media/video/frames/hd_464.jpg"
"../media/video/frames/hd_465.jpg"
"../media/video/frames/hd_466.jpg"
"../media/video/frames/hd_467.jpg"
"../media/video/frames/hd_468.jpg"
"../media/video/frames/hd_469.jpg"
"../media/video/frames/hd_470.jpg"
"../media/video/frames/hd_471.jpg"
"../media/video/frames/hd_472.jpg"
"../media/video/frames/hd_473.jpg"
"../media/video/frames/hd_474.jpg"
"../media/video/frames/hd_475.jpg"
"../media/video/frames/hd_476.jpg"
"../media/video/frames/hd_477.jpg"
"../media/video/frames/hd_478.jpg"
"../media/video/frames/hd_479.jpg"
"../media/video/frames/hd_480.jpg"
"../media/video/frames/hd_481.jpg"
"../media/video/frames/hd_482.jpg"
"../media/video/frames/hd_483.jpg"
"../media/video/frames/hd_484.jpg"
"../media/video/frames/hd_485.jpg"
"../media/video/frames/hd_486.jpg"
"../media/video/frames/hd_487.jpg"
"../media/video/frames/hd_488.jpg"
"../media/video/frames/hd_489.jpg"
"../media/video/frames/hd_490.jpg"
"../media/video/frames/hd_491.jpg"
"../media/video/frames/hd_492.jpg"
"../media/video/frames/hd_493.jpg"
"../media/video/frames/hd_494.jpg"
"../media/video/frames/hd_495.jpg"
"../media/video/frames/hd_496.jpg"
"../media/video/frames/hd_497.jpg"
"../media/video/frames/hd_498.jpg"
"../media/video/frames/hd_499.jpg"
"../media/video/frames/hd_500.jpg"
)

